# AstrBot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  .pyscn.toml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Makefile  PSScriptAnalyzerSettings.psd1  README.md  README_es.md  README_fr.md  README_ja.md  README_ru.md  README_zh-TW.md  README_zh.md  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  taplo.toml  upstream-sync.yaml
.github/: copilot-instructions.md
.github/workflows/: build-docs.yml  code-format.yml  codeql.yml  coverage_test.yml  dashboard_ci.yml  dependency-review.yml  docker-image.yml  plugin-ui-e2e.yml  quality-gates.yml  release.yml  secret-scan.yml  smoke_test.yml  stale.yml  sync-wiki.yml  unit_tests.yml
astrbot/api/: __init__.py  all.py  command.py  web.py
astrbot/api/event/: __init__.py
astrbot/api/provider/: __init__.py
astrbot/api/star/: __init__.py
astrbot/builtin_stars/astrbot/: group_chat_context.py  main.py
astrbot/builtin_stars/builtin_commands/: main.py  metadata.yaml
astrbot/cli/commands/: cmd_conf.py  cmd_init.py  cmd_password.py  cmd_plug.py  cmd_run.py
astrbot/cli/utils/: __init__.py  basic.py  plugin.py  version_comparator.py
astrbot/core/: __init__.py  astr_agent_context.py  astr_agent_hooks.py  astr_agent_run_util.py  astr_agent_tool_exec.py  astr_main_agent.py  astr_main_agent_resources.py  astrbot_config_mgr.py  conversation_mgr.py  core_lifecycle.py  event_bus.py  exceptions.py  file_token_service.py  initial_loader.py  log.py  persona_error_reply.py  persona_mgr.py  runtime_services.py  subagent_orchestrator.py  umo_alias.py  umop_config_router.py  updator.py  zip_updator.py
astrbot/core/agent/: chat_model.py  handoff.py  history_sanitizer.py  hooks.py  llm_types.py  mcp_client.py  message.py  response.py  tool.py  tool_history_compactor.py
astrbot/core/backup/: _importer_datetime.py  exporter.py  (+5 more)
astrbot/dashboard/: asgi_runtime.py  async_utils.py  password_state.py  plugin_page_auth.py  request_state.py  responses.py  schemas.py  server.py  upload_utils.py
changelogs/: v4.26.0.md  v4.26.5.md  v4.26.7.md
dashboard/: env.d.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.vite-config.json  vite.config.ts
dashboard/scripts/: check-fonts.mjs  subset-mdi-font.d.mts  update-fonts.mjs  write-dashboard-version.mjs
dashboard/src/: App.vue  config.ts  main.ts
dashboard/tests/: apiBoundary.vitest.ts  appearanceStore.vitest.ts  chatComponentSmokes.vitest.ts  chatViewSmoke.vitest.ts  commandSuggestion.vitest.ts  errorUtils.vitest.ts  i18nRuntimeSmokes.vitest.ts  localFonts.vitest.ts  longTermMemoryPage.vitest.ts  platformQuickActionRuntime.vitest.ts  platformQuickActionsDialog.vitest.ts  platformUtils.vitest.ts  useMessagesFollowUp.vitest.ts
docs/: README.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mjs
docs/en/: community.md  faq.md  index.md  what-is-astrbot.md
docs/public/: install.ps1  openapi.json
docs/scripts/: sync_docs_to_wiki.py  update_openapi_json.py  upload_doc_images_to_r2.py
docs/zh/: community.md  faq.md  index.md  what-is-astrbot.md
openspec/: openapi-v1.yaml
scripts/: astrbot.service  doctor.py  lint_powershell.ps1  make_dev.ps1  normalize_line_endings.ps1  normalize_line_endings.py  pr_test_env.ps1  pr_test_env.sh  prepare_release.py  run_tracked_node_tool.ps1  run_tracked_node_tool.py  smoke_startup_check.py  sync_dashboard_dist.py
scripts/napcat/: generate_ob11_event_models.ps1  generate_ob11_event_schema.ps1  normalize_ob11_event_schema.ps1  normalize_ob11_event_schema.py
tests/: conftest.py  test_anthropic_kimi_code_provider.py  test_api_key_open_api.py  test_backup.py  test_builtin_command_extensions.py  test_chat_route.py  test_cli_init.py  test_cli_run.py  test_computer_config.py  test_computer_fs_tools.py  test_computer_skill_sync.py  test_conversation_checkpoint.py  test_conversation_commands.py  test_coze_agent_runner.py  test_dashboard.py  test_dashscope_agent_runner.py  test_dingtalk_adapter.py  test_discord_adapter.py  test_epub_parser.py  test_fastapi_v1_dashboard.py  test_gemini_source.py  test_kb_import.py  test_lark_adapter.py  test_line_adapter.py  test_line_event.py  test_local_filesystem_component.py  test_local_shell_component.py  test_main.py  test_mattermost_adapter.py  test_media_utils.py  test_neo_skill_sync.py  test_neo_skill_tools.py  test_openai_chat_completions_source.py  test_openai_embedding_source.py  test_openai_responses_source.py  test_openai_source.py  test_pip_helper_modules.py  test_pip_installer.py  test_platform_audio_media_resolver.py  test_platform_image_format_preservation.py  (+23 more)
tests/agent/: test_context_manager.py
tests/helpers/: __init__.py  dashboard_test_adapter.py
tests/test_kook/: test_kook_client.py
tests/unit/: test_agent_request_sub_stage.py  test_agent_runner_base.py  test_agent_sub_stages.py  test_aiocqhttp_adapter.py  test_aiocqhttp_poke.py  test_astr_agent_run_util.py  test_astr_agent_tool_exec.py  test_astr_main_agent.py  test_astr_message_event.py  test_astrbot_config_mgr.py  test_backup_error_redaction.py  test_backup_service.py  test_chat_service.py  test_cli_plugin_utils.py  test_command_management.py  test_command_parsing.py  test_computer.py  test_config.py  test_core_import_smoke.py  test_core_lifecycle.py  test_cua_computer_use.py  test_dashboard_appearance_service.py  test_dashboard_config_persistence.py  test_dashboard_config_service.py  test_dashboard_service_error_redaction.py  test_doctor_script.py  test_error_redaction.py  test_event_loop_diagnostics.py  test_file_message_component.py  test_forward_node_splitter.py  test_func_tool_manager.py  test_history_sanitizer.py  test_html_renderer.py  test_import_boundaries.py  test_initial_loader.py  test_io_download_file.py  test_kb_helper_url_import.py  test_kb_manager_resilience.py  test_knowledge_base_service.py  test_knowledge_base_service_contract.py  (+59 more)
(+795 files in other folders)
