[project]
name = "AstrBot"
version = "4.26.5"
description = "Easy-to-use multi-platform LLM chatbot and development framework"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.14"

keywords = ["AstrBot", "Agent", "Chatbot", "IM"]

dependencies = [
  "aiocqhttp>=1.4.4",
  "aiodocker>=0.27.0",
  "aiohttp>=3.14.1",
  "aiosqlite>=0.22.1",
  "anthropic>=0.116.0",
  "apscheduler>=3.11.3",
  "attrs>=26.1.0",
  "certifi>=2026.6.17",
  "chardet>=7.4.3",
  "loguru>=0.7.3",
  "cryptography>=49.0.0",
  "dashscope>=1.26.2",
  "dingtalk-stream>=0.24.3",
  "docstring-parser>=0.18.0",
  "faiss-cpu>=1.14.3",
  "fastapi>=0.139.0",
  "filelock>=3.29.7",
  "google-genai>=2.11.0",
  "httpx[socks]>=0.28.1",
  "lark-oapi>=1.7.1",
  "mcp>=1.28.1,<2",
  "openai>=2.45.0",
  "ormsgpack>=1.12.2",
  "pillow>=12.3.0",
  "pip>=26.1.2",
  "psutil>=7.2.2",
  "py-cord>=2.8.0",
  "pydantic>=2.13.4",
  "pydub>=0.25.1",
  "pyjwt>=2.13.0",
  "qrcode>=8.2",
  "python-telegram-bot>=22.8",
  "qq-botpy==1.2.1",
  "silk-python>=0.2.8",
  "slack-sdk>=3.43.0",
  "sqlalchemy[asyncio]>=2.0.51",
  "sqlmodel>=0.0.39",
  "telegramify-markdown>=1.2.0",
  "watchfiles>=1.2.0",
  "quart>=0.20.0",
  "websockets>=15.0.1",
  "wechatpy>=1.8.18",
  "audioop-lts>=0.2.2",
  "click>=8.4.2",
  "pypdf>=6.14.2",
  "aiofiles>=25.1.0",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "markitdown-no-magika[docx,xls,xlsx]>=0.1.2",
  "xinference-client>=2.12.0",
  "tenacity>=9.1.4",
  "shipyard-python-sdk>=0.2.4",
  "shipyard-neo-sdk>=0.2.0",
  "python-socks>=2.8.2",
  "pysocks>=1.7.1",
  "packaging>=26.2",
  "python-ripgrep>=0.0.9",
  "pyotp>=2.10.0",
]

[dependency-groups]
dev = [
  "commitizen>=4.16.4",
  "bandit[toml]>=1.9.4",
  "pip-audit>=2.10.1",
  "pyright>=1.1.411",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "radon>=6.0.1",
  "ruff>=0.15.20",
  "yamllint>=1.38.0",
]

[project.scripts]
astrbot = "astrbot.cli.__main__:cli"

[project.urls]
Repository = "https://github.com/AstrBotDevs/AstrBot"

[tool.ruff]
exclude = [
  "astrbot/core/utils/t2i/local_strategy.py",
  "astrbot/api/all.py",
  "tests",
]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "Q",     # flake8-quotes
  "I",     # import-order
  "UP",    # pyupgrade
  # "SIM", # flake8-simplify 
]
ignore = [
  "F403",
  "F405",
  "E501",
  "ASYNC230", # TODO: handle ASYNC230 in AstrBot
  "ASYNC240", # TODO: handle ASYNC240 in AstrBot
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.bandit]
exclude_dirs = ["tests", "data", ".venv", "dashboard/node_modules"]
skips = ["B101", "B105", "B110"]

[tool.coverage.run]
omit = ["data/plugins/*", "data/plugins/**/*"]

[tool.coverage.report]
omit = ["data/plugins/*", "data/plugins/**/*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:'_UnionGenericAlias' is deprecated.*Python 3\\.17:DeprecationWarning:google\\.genai\\.types",
  "ignore:'return' in a 'finally' block:SyntaxWarning:dingtalk_stream\\.stream",
  "ignore:'return' in a 'finally' block:SyntaxWarning:discord\\.gateway",
  "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated and scheduled for removal in a future version.*:DeprecationWarning:lark_oapi\\.ws\\.pb\\.google\\.protobuf\\.internal\\.well_known_types",
  "ignore:The default datetime adapter is deprecated as of Python 3\\.12.*:DeprecationWarning:aiosqlite\\.core",
  "ignore:Use 'content=<\\.\\.\\.>' to upload raw bytes/text content\\.:DeprecationWarning:httpx\\._models",
]

[tool.hatch.metadata]
allow-direct-references = true

# Include bundled dashboard dist even though it is not tracked by VCS.
[tool.hatch.build]
artifacts = ["astrbot/dashboard/dist/**"]

# Custom build hook: builds the Vue dashboard and copies dist into the package.
[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
